fixed spacing on chrome

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,7 @@
 header {
     height: fit-content;
 }
+
+body{
+  grid-template-rows: fit-content(100%);
+}
